# phylax

./: .gitignore  LICENSE  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_init.sql
backend/src/: auth.rs  crypto.rs  db.rs  error.rs  main.rs  models.rs  state.rs
backend/src/routes/: auth_routes.rs  mod.rs  vault_routes.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/lib/: api.ts
frontend/src/lib/components/ui/alert/: alert.svelte
frontend/src/lib/components/ui/badge/: badge.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card-content.svelte  card-description.svelte  card-footer.svelte  card-header.svelte  card-title.svelte  card.svelte
frontend/src/lib/components/ui/dialog/: dialog-footer.svelte  dialog-header.svelte  dialog-title.svelte  dialog.svelte  index.ts
frontend/src/lib/components/ui/input/: input.svelte
frontend/src/lib/components/ui/label/: label.svelte
frontend/src/lib/components/ui/separator/: separator.svelte
frontend/src/lib/stores/: auth.ts  toast.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/vault/: +page.svelte
